--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -67,11 +67,11 @@ const isActive = (path: string) => {
             "sm:mt-0 sm:ml-0 sm:flex sm:w-auto sm:gap-x-5 sm:gap-y-0",
           ]}
         >
-          <!-- <li class="col-span-2">
+          <li class="col-span-2">
             <a href="/posts" class:list={{ "active-nav": isActive("/posts") }}>
               Posts
             </a>
-          </li> -->
+          </li>
           <!-- <li class="col-span-2">
             <a href="/tags" class:list={{ "active-nav": isActive("/tags") }}>
               Tags
